--- a/public/assets/css/links.css
+++ b/public/assets/css/links.css
@@ -1,4 +1,7 @@
+@import "stargMasterStyling.css";
+
 * {
+    font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -27,7 +30,7 @@
 }
 .grid-visual {
     height: 35%;
-    background-color: red;
+    background-color: var(--dark-button);
     opacity: 1;
     border-radius: 12px;
     transition: height .5s ease, opacity .5s ease;
